--- a/msvc-cursos/Dockerfile
+++ b/msvc-cursos/Dockerfile
@@ -1,16 +1,16 @@
 FROM openjdk:17.0.2-slim as builder
 
-WORKDIR /app/msvc-usuarios
+WORKDIR /app/msvc-cursos
 
 COPY ./pom.xml /app
-COPY ./msvc-usuarios/.mvn ./.mvn
-COPY ./msvc-usuarios/mvnw .
-COPY ./msvc-usuarios/pom.xml .
+COPY ./msvc-cursos/.mvn ./.mvn
+COPY ./msvc-cursos/mvnw .
+COPY ./msvc-cursos/pom.xml .
 
 RUN ./mvnw clean package -Dmaven.test.skip -Dmaven.main.skip -Dspring-boot.repackage.skip && rm -r ./target/
 # RUN ./mvnw dependency:go-offline
 
-COPY ./msvc-usuarios/src ./src/
+COPY ./msvc-cursos/src ./src/
 
 RUN ./mvnw clean package -DskipTests
 
@@ -20,8 +20,8 @@ WORKDIR /app
 
 RUN mkdir ./logs
 
-COPY --from=builder ./app/msvc-usuarios/target/msvc-usuarios-0.0.1-SNAPSHOT.jar .
+COPY --from=builder ./app/msvc-cursos/target/msvc-cursos-0.0.1-SNAPSHOT.jar .
 
 EXPOSE 8001
 
-ENTRYPOINT ["java", "-jar", "msvc-usuarios-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "msvc-cursos-0.0.1-SNAPSHOT.jar"]
