--- a/msvc-cursos/src/main/resources/application.properties
+++ b/msvc-cursos/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=msvc-cursos
 server.port=8002
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/msvc_cursos
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/msvc_cursos
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+logging.file.path=/app/logs
