--- a/msvc-cursos/Dockerfile
+++ b/msvc-cursos/Dockerfile
@@ -1,27 +1,39 @@
+ARG MSVC_NAME=msvc-cursos
+
 FROM openjdk:17.0.2-slim as builder
 
-WORKDIR /app/msvc-cursos
+ARG MSVC_NAME
+
+WORKDIR /app/$MSVC_NAME
 
 COPY ./pom.xml /app
-COPY ./msvc-cursos/.mvn ./.mvn
-COPY ./msvc-cursos/mvnw .
-COPY ./msvc-cursos/pom.xml .
+COPY ./$MSVC_NAME/.mvn ./.mvn
+COPY ./$MSVC_NAME/mvnw .
+COPY ./$MSVC_NAME/pom.xml .
 
 RUN ./mvnw clean package -Dmaven.test.skip -Dmaven.main.skip -Dspring-boot.repackage.skip && rm -r ./target/
 # RUN ./mvnw dependency:go-offline
 
-COPY ./msvc-cursos/src ./src/
+COPY ./$MSVC_NAME/src ./src/
 
 RUN ./mvnw clean package -DskipTests
 
 FROM openjdk:17.0.2-slim
 
+ARG MSVC_NAME
+
 WORKDIR /app
 
 RUN mkdir ./logs
 
-COPY --from=builder ./app/msvc-cursos/target/msvc-cursos-0.0.1-SNAPSHOT.jar .
+ARG TARGET_FOLDER=/app/$MSVC_NAME/target
 
-EXPOSE 8001
+COPY --from=builder .$TARGET_FOLDER/msvc-cursos-0.0.1-SNAPSHOT.jar .
+
+ARG PORT_APP=8002
+
+ENV PORT $PORT_APP
+
+EXPOSE $PORT
 
 ENTRYPOINT ["java", "-jar", "msvc-cursos-0.0.1-SNAPSHOT.jar"]
