--- a/msvc-cursos/src/main/resources/application.properties
+++ b/msvc-cursos/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=msvc-cursos
 server.port=8002
-spring.datasource.url=jdbc:postgresql://postgres14:5432/msvc_cursos
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${DB_HOST:postgres14:5432}/${DATA_BASE:msvc_cursos}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 logging.file.path=/app/logs
+
+msvc.usuarios.url=${USUARIOS_URL:msvc-usuarios:8001}
