--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=msvc-usuarios
-server.port=8001
-spring.datasource.url=jdbc:mysql://mysql8:3306/msvc_usuarios
-spring.datasource.username=root
-spring.datasource.password=root
+server.port=${PORT:8001}
+spring.datasource.url=jdbc:mysql://${DB_HOST:mysql8:3306}/${DATA_BASE:msvc_usuarios}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
 logging.file.path=/app/logs
+
+msvc.cursos.url=${CURSOS_URL:msvc-cursos:8002}
