--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=msvc-usuarios
 server.port=${PORT:8001}
-spring.datasource.url=jdbc:mysql://${DB_HOST:mysql8:3306}/${DATA_BASE:msvc_usuarios}
+spring.datasource.url=jdbc:mysql://${DB_HOST:mysql8:3306}/${DB_DATABASE:msvc_usuarios}?serverTimezone=America/Santiago&allowPublicKeyRetrieval=false
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
